--- a/us_export.html
+++ b/us_export.html
@@ -25,7 +25,7 @@
     <header id="top" class="header navbar-fixed-top">
         <div class="container">
             <h1 class="logo pull-left">
-                <a class="scrollto" href="#promo">
+                <a class="scrollto" href="/#promo">
                     <img id="logo-image" class="logo-image" src="assets/images/logo/logo.png" alt="Logo">
                     <span class="logo-title">Privacy Solutions</span>
                 </a>
