Bote uses crypto code in i2p.jar

--- a/us_export.html
+++ b/us_export.html
@@ -97,12 +97,12 @@
 <td rowspan="2">Bote</td>
 <td>development</td>
 <td>5D002</td>
-<td><a href="https://github.com/i2p/i2p.i2p-bote/tree/master/src/main/java/i2p/bote/crypto">I2P</a>, <a href="https://www.bouncycastle.org/download/bcprov-jdk16-146.tar.gz">Bouncy Castle</a>, <a href="https://github.com/tbuktu/ntru">Tim Buktu</a></td>
+<td><a href="https://github.com/i2p/i2p.i2p/tree/master/core/java/src/net/i2p/crypto">I2P</a>, <a href="https://github.com/i2p/i2p.i2p-bote/tree/master/src/main/java/i2p/bote/crypto">I2P</a>, <a href="https://www.bouncycastle.org/download/bcprov-jdk16-146.tar.gz">Bouncy Castle</a>, <a href="https://github.com/tbuktu/ntru">Tim Buktu</a></td>
 </tr>
 <tr>
 <td>0.x and later</td>
 <td>5D002</td>
-<td><a href="https://github.com/i2p/i2p.i2p-bote/tree/master/src/main/java/i2p/bote/crypto">I2P</a>, <a href="https://www.bouncycastle.org/download/bcprov-jdk16-146.tar.gz">Bouncy Castle</a>, <a href="https://github.com/tbuktu/ntru">Tim Buktu</a></td>
+<td><a href="https://download.i2p2.de/releases/">I2P</a>, <a href="https://github.com/i2p/i2p.i2p-bote/tree/master/src/main/java/i2p/bote/crypto">I2P</a>, <a href="https://www.bouncycastle.org/download/bcprov-jdk16-146.tar.gz">Bouncy Castle</a>, <a href="https://github.com/tbuktu/ntru">Tim Buktu</a></td>
 </tr>
 </tbody>
 </table>
