--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta name="description" content="Privacy solutions, I2Pd, The Abscond browser bundle, I2P">
     <meta name="author" content="Mikal Villa">
     <link rel="shortcut icon" href="favicon.ico">
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css'>
+    <!-- Fonts -->
+    <link href='assets/css/fonts.css' rel='stylesheet' type='text/css'>
     <!-- Global CSS -->
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
     <!-- Plugins CSS -->
@@ -23,8 +23,8 @@
     <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+      <script src="assets/js/html5shiv_3.7.0.js"></script>
+      <script src="assets/js/respond_1.4.2.min.js"></script>
     <![endif]-->
 </head>
 
@@ -229,8 +229,8 @@
                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="V64UKJLQA9QM2">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/no_NO/i/scr/pixel.gif" width="1" height="1">
+<input type="image" src="assets/images/paypal/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="assets/images/paypal/pixel.gif" width="1" height="1">
 </form>
 <a href="https://flattr.com/profile/meeh" target="_blank">Flatter link</a>
 </fieldset>
